Test Sandbox Project/src/objects/Resolution__c.object
<CustomObject>
    <fields>
        <fullName>Alasan_perubahan__c</fullName>
        <label>Alasan perubahan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>History_Action__c</fullName>
        <label>History Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Resolution</relationshipLabel>
        <relationshipName>Resolution</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Resolution</relationshipLabel>
        <relationshipName>Resolution</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_In_Resolution__c</fullName>
        <label>Product in Resolution</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reso_Topic__c</fullName>
        <label>Reso Topic</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Created_Date__c</fullName>
        <label>Resolution Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Resolution_Topic__c</fullName>
        <label>Resolution Topic</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solusi__c</fullName>
        <label>Solusi</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Resolution</label>
    <nameField>
        <displayFormat>Reso-{0000}</displayFormat>
        <label>Resolution  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resolution</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>